--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -2,5 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+}
+
+.projects-container {
+  display: flex;
+  flex-wrap: wrap;
 }
